--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -857,45 +857,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom Transform\n",
-    "\n",
-    "Function transformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Make Column Selector"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Create a callable to select columns to be used with ColumnTransformer.\n",
+    "\n",
+    "make_column_selector can select columns based on datatype or the columns name with a regex. When using multiple selection criteria, all criteria must match for a column to be selected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.90453403,  1.        ,  0.        ,  0.        ],\n",
+       "       [-1.50755672,  1.        ,  0.        ,  0.        ],\n",
+       "       [-0.30151134,  0.        ,  1.        ,  0.        ],\n",
+       "       [ 0.90453403,  0.        ,  0.        ,  1.        ]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.compose import make_column_selector\n",
+    "import numpy as np\n",
+    "import pandas as pd  \n",
+    "\n",
+    "X = pd.DataFrame({'city': ['London', 'London', 'Paris', 'Sallisaw'],\n",
+    "                  'rating': [5, 3, 4, 5]})  \n",
+    "ct = make_column_transformer(\n",
+    "      (StandardScaler(),\n",
+    "       make_column_selector(dtype_include=np.number)),  # rating\n",
+    "      (OneHotEncoder(),\n",
+    "       make_column_selector(dtype_include=object)))  # city\n",
+    "ct.fit_transform(X)  "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline"
+    "## Pipeline\n",
+    "\n",
+    "Pipeline of transforms with a final estimator.\n",
+    "\n",
+    "Sequentially apply a list of transforms and a final estimator. Intermediate steps of the pipeline must be ‘transforms’, that is, they must implement fit and transform methods. The final estimator only needs to implement fit. The transformers in the pipeline can be cached using memory argument."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
+    "\n",
+    "X, y = make_classification(random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.88"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe = Pipeline([('scaler', StandardScaler()), ('svc', SVC())])\n",
+    "# The pipeline can be used as any other estimator\n",
+    "# and avoids leaking the test set into the train set\n",
+    "\n",
+    "pipe.fit(X_train, y_train).score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.76"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# An estimator's parameter can be set using '__' syntax\n",
+    "pipe.set_params(svc__C=10).fit(X_train, y_train).score(X_test, y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
