--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -67307,11 +67307,596 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_bill   tip     sex smoker  day    time  size\n",
+       "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+       "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+       "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+       "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+       "4       24.59  3.61  Female     No  Sun  Dinner     4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "https://pbpython.com/images/crosstab_cheatsheet_header.png"
+    "from seaborn import load_dataset\n",
+    "df = load_dataset(\"tips\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>day</th>\n",
+       "      <th>Thur</th>\n",
+       "      <th>Fri</th>\n",
+       "      <th>Sat</th>\n",
+       "      <th>Sun</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lunch</th>\n",
+       "      <td>61</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dinner</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>87</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "day     Thur  Fri  Sat  Sun\n",
+       "time                       \n",
+       "Lunch     61    7    0    0\n",
+       "Dinner     1   12   87   76"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df['time'], df['day'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>diesel</th>\n",
+       "      <th>petrol</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>row_0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Honda</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jeep</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suzuki</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tata</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toyota</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0   diesel  petrol\n",
+       "row_0                 \n",
+       "Honda        0       1\n",
+       "Jeep         0       1\n",
+       "Suzuki       1       0\n",
+       "Tata         1       0\n",
+       "Toyota       1       0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_names = ['Suzuki','Honda','Toyota','Jeep','Tata']\n",
+    "fuel_type = ['diesel','petrol','diesel','petrol','diesel']\n",
+    "price = [10, 18, 27, 35, 15]\n",
+    "\n",
+    "pd.crosstab(index=[car_names], columns=[fuel_type])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Units</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-07-11</td>\n",
+       "      <td>East</td>\n",
+       "      <td>Children's Clothing</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-09-23</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Children's Clothing</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Women's Clothing</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-02-28</td>\n",
+       "      <td>East</td>\n",
+       "      <td>Children's Clothing</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>West</td>\n",
+       "      <td>Women's Clothing</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2020-02-11</td>\n",
+       "      <td>East</td>\n",
+       "      <td>Children's Clothing</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2020-12-25</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Men's Clothing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>2020-08-31</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Men's Clothing</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2020-08-23</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Women's Clothing</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>2020-08-17</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Women's Clothing</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Region                 Type  Units  Sales\n",
+       "0   2020-07-11   East  Children's Clothing   18.0    306\n",
+       "1   2020-09-23  North  Children's Clothing   14.0    448\n",
+       "2   2020-04-02  South     Women's Clothing   17.0    425\n",
+       "3   2020-02-28   East  Children's Clothing   26.0    832\n",
+       "4   2020-03-19   West     Women's Clothing    3.0     33\n",
+       "..         ...    ...                  ...    ...    ...\n",
+       "995 2020-02-11   East  Children's Clothing   35.0    735\n",
+       "996 2020-12-25  North       Men's Clothing    NaN   1155\n",
+       "997 2020-08-31  South       Men's Clothing   13.0    208\n",
+       "998 2020-08-23  South     Women's Clothing   17.0    493\n",
+       "999 2020-08-17  North     Women's Clothing   25.0    300\n",
+       "\n",
+       "[1000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('https://github.com/datagy/mediumdata/raw/master/sample_pivot.xlsx', parse_dates=['Date'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type</th>\n",
+       "      <th>Children's Clothing</th>\n",
+       "      <th>Men's Clothing</th>\n",
+       "      <th>Women's Clothing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>East</th>\n",
+       "      <td>113</td>\n",
+       "      <td>122</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North</th>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South</th>\n",
+       "      <td>45</td>\n",
+       "      <td>39</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>42</td>\n",
+       "      <td>41</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type    Children's Clothing  Men's Clothing  Women's Clothing\n",
+       "Region                                                       \n",
+       "East                    113             122               176\n",
+       "North                    85              89               142\n",
+       "South                    45              39                53\n",
+       "West                     42              41                53"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df.Region, df.Type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type</th>\n",
+       "      <th>Children's Clothing</th>\n",
+       "      <th>Men's Clothing</th>\n",
+       "      <th>Women's Clothing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>East</th>\n",
+       "      <td>405.743363</td>\n",
+       "      <td>423.647541</td>\n",
+       "      <td>399.028409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North</th>\n",
+       "      <td>438.894118</td>\n",
+       "      <td>449.157303</td>\n",
+       "      <td>432.528169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South</th>\n",
+       "      <td>412.666667</td>\n",
+       "      <td>475.435897</td>\n",
+       "      <td>418.924528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>480.523810</td>\n",
+       "      <td>465.292683</td>\n",
+       "      <td>419.188679</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type    Children's Clothing  Men's Clothing  Women's Clothing\n",
+       "Region                                                       \n",
+       "East             405.743363      423.647541        399.028409\n",
+       "North            438.894118      449.157303        432.528169\n",
+       "South            412.666667      475.435897        418.924528\n",
+       "West             480.523810      465.292683        419.188679"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(index = df.Region, columns = df.Type, values = df.Sales, aggfunc = 'mean')"
    ]
   },
   {
