--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Python for Data Analysis_ Data Wrangling with pandas, NumPy, and Jupyter (2022, O'Reilly Media)](https://drive.google.com/file/d/1GA3KRXSIXI9p5DCU-ADDnxkWuL1ZeXNK/view?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
