--- a/project.ipynb
+++ b/project.ipynb
@@ -11,7 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## library and data importing"
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning:\n",
+    "\n",
+    "### library and data importing\n",
+    "\n",
+    "First of All try to use .sql file to make a table in your database and then try to make a request to your database to read that table and make a dataframe out of it"
    ]
   },
   {
@@ -413,8 +438,8 @@
     "\n",
     "\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com//showmidelo/Advanced_Pandas_karyar/main/Life%20Expectancy%20Data.csv'\n",
-    "df = pd.read_csv(url)\n",
+    "\n",
+    "df = pd.read_sql()\n",
     "df"
    ]
   },
@@ -422,36 +447,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try to imput and find outliers in dataframe with methods you have learned during this course"
+    "### Imputing null values: \n",
+    "\n",
+    "try to use some of the methods you've learned"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -464,8 +463,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select integer and string columns individually and check correlation for both of them"
+    "### Try to detect and remove outliers by any method you think that works on dataframe "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perform an EDA on cleaned dataframe such as correlation and etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
