--- a/project.ipynb
+++ b/project.ipynb
@@ -41,6 +41,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -434,12 +443,17 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import sqlite3\n",
     "\n",
+    "# Connect to the database\n",
+    "con = sqlite3.connect() \n",
     "\n",
+    "# Run SQL          \n",
+    "sql_query = pd.read_sql()\n",
     "\n",
+    "# Convert SQL to DataFrame\n",
+    "df = pd.DataFrame(sql_query, columns = [])\n",
     "\n",
-    "\n",
-    "df = pd.read_sql()\n",
     "df"
    ]
   },
@@ -490,7 +504,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Try to use a method to make table has just one row for every country and export all values in front of their records"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### use time series to show decrese and increase in any feature during data time"
+   ]
   },
   {
    "cell_type": "code",
@@ -500,6 +528,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### try to use a method to make table has just one row for every country and export every feature's mean in front of thier records"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -507,10 +542,23 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FOR MORE INFORMATION:\n",
+    "Try to fit a regression/classification model on dataset and evalute its metrics to tell how the model is working"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
