--- a/project.ipynb
+++ b/project.ipynb
@@ -491,7 +491,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform an EDA on cleaned dataframe such as correlation and etc."
+    "### Perform an EDA on cleaned dataframe such as correlation and etc.\n",
+    "\n",
+    "you can use plotly library to visulize your findings"
    ]
   },
   {
@@ -509,8 +511,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
