--- a/project.ipynb
+++ b/project.ipynb
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try to detect and remove outliers by any method you think that works on dataframe "
+    "### Try to detect and remove outliers by any method you think that works on dataframe (you even can detect them by z value)"
    ]
   },
   {
